...
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tkq-5l-6XY">
                            <rect key="frame" x="0.0" y="-10" width="393" height="684"/>
                            <subviews>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZQB-tv-PyX" customClass="StyledTextField" customModule="GopeTalkie" customMod
                                    <rect key="frame" x="26" y="126.66666666666666" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="registerName"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="7WC-kE-P5A"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                    <textInputTraits key="textInputTraits" textContentType="name"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Apellido" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R13-IT-R7B" customClass="StyledTextField" customModule="GopeTalkie" customM
                                    <rect key="frame" x="26" y="196.66666666666669" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="registerLastName"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="o0N-Rp-uyz"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                    <textInputTraits key="textInputTraits" textContentType="name"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo Electronico" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gXa-9R-RL8" customClass="StyledTextField" customModule="GopeTalki
                                    <rect key="frame" x="26" y="266.66666666666669" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="registerEmail"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="Ie9-U9-R2J"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                    <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gn8-lM-9GK" customClass="StyledTextField" customModule="GopeTalkie" custo
                                    <rect key="frame" x="26" y="336.66666666666669" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="registerPassword"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="Arg-wq-Qwf"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                    <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirmar Contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fc1-Si-THk" customClass="StyledTextField" customModule="GopeTal
                                    <rect key="frame" x="26" y="406.66666666666663" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="registerConfirmPassword"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="lRX-xe-Eai"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                    <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eY-Jj-1w9">
                                    <rect key="frame" x="26" y="491.66666666666663" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="registerSend"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="XQl-nW-WIk"/>
                                    </constraints>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="filled" title="Enviar">
                                        <color key="baseBackgroundColor" red="0.29411764705882354" green="0.0" blue="0.50980392156862742" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
