...
                                    <accessibility key="accessibilityConfiguration" identifier="LoginRegister"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="QOv-iF-ZeR"/>
                                        <constraint firstAttribute="width" constant="111" id="zac-1R-zAd"/>
                                    </constraints>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="filled" title="Registrarse">
                                        <color key="baseBackgroundColor" red="0.29411764705882354" green="0.0" blue="0.50980392156862742" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </buttonConfiguration>
                                    <connections>
                                        <action selector="didTapRegister:" destination="-1" eventType="touchUpInside" id="ZuG-Lc-Kb8"/>
                                    </connections>
                                </button>
...
